2007-09-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* filesets.el: Remove spurious * in docstrings.
	(filesets-running-xemacs): Remove.  Use (featurep 'xemacs) instead.
	(filesets-conditional-sort): Remove unused arg `simply-do-it'.
	(filesets-ingroup-collect): Remove unused arg `depth'.
	(filesets-update): Remove unused arg `version'.

	* finder.el (finder-compile-keywords): Fix up comment style.
	(finder-mouse-face-on-line): previous-line -> forward-line.

	* recentf.el: Remove spurious * in docstrings.
	(recentf-save-list): Fix up comment style.

	* progmodes/octave-mod.el: Remove spurious * in docstrings.
	(octave-mode-map): Move init into declaration and remove \t binding.
	(octave-mode-startup-message): Remove unused var.
	(octave-scan-blocks): Remove unused arg `from'.
	(octave-forward-block, octave-down-block, octave-up-block):
	Update callers.

	* progmodes/meta-mode.el (meta-mode-syntax-table): Move init into decl.
	(meta-mode-map): Likewise and remove \t binding.

	* net/snmp-mode.el: Remove spurious * in docstrings.
	(snmp-rfc1155-types, snmp-rfc1213-types, snmp-rfc1902-types)
	(snmp-rfc1903-types, snmp-rfc1155-access, snmp-rfc1902-access)
	(snmp-rfc1212-status, snmp-rfc1902-status): Remove list wrappers now
	that completion accepts lists of strings.
	(snmp-mode-syntax-table): Move initialization into declaration.
	(snmp-mode-map): Likewise and remove \t binding.
	(snmp-common-mode): Set tab-always-indent according to snmp-t-a-i.
	(snmp-indent-line, snmp-mode-imenu-create-index): Remove unused var.
	(snmp-indent-command): Remove.

	* emacs-lisp/lisp-mode.el (lisp-mode-shared-map): Use the default TAB
	binding, so tab-always-indent works right.

2007-09-19  Johannes Weiner  <hannes@saeurebad.de>

	* net/browse-url.el (browse-url-elinks-new-window): New function.
	(browse-url-elinks): Use browse-url-elinks-new-window.
	Accept optional second argument `new-window'.  Fix typo in doc-string.